[package]
authors = ["Markus Siemens <markus@m-siemens.de>"]
name = "rpong"
version = "0.1.0"

[[bin]]
name = "rpong"

[dependencies]
float-cmp = "0.2.2"
nalgebra = "0.9.*"
ncollide = "0.10.*"
piston = "0.25.0"
piston2d-graphics = "0.17.0"
pistoncore-glutin_window = "0.29.0"
piston2d-opengl_graphics = "0.32.0"
rand = "0.3"