[package]
authors = ["Markus Siemens <markus@m-siemens.de>"]
name = "rpong"
version = "0.1.0"

[[bin]]
name = "rpong"

[dependencies]
float-cmp = "0.2.2"
nalgebra = "0.13"
ncollide = "0.13"
piston = "0.33.0"
piston2d-graphics = "0.21"
piston2d-opengl_graphics = "0.46.0"
pistoncore-glutin_window = "0.39.0"
rand = "0.3"